--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
+    "@types/memory-cache": "^0.2.2",
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
