--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
+    "marked": "^4.1.0",
     "memory-cache": "^0.2.0",
     "next": "12.2.5",
     "node-ts-cache-storage-memory": "^4.4.0",
@@ -18,6 +19,7 @@
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.7",
     "@types/memory-cache": "^0.2.2",
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
