--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
+    "@types/marked": "^4.0.7",
     "@types/memory-cache": "^0.2.2",
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
