--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-ts-cache-storage-memory": "^4.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spring": "^9.5.4",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
