--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,21 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+      
     steps:
-    - name: Deploy to server
+    - uses: actions/checkout@v1
+    - name: Install Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: '10.x'
+    - name: Install npm dependencies
+      run: npm install
+    - name: Run build task
+      run: npm run build --if-present
+    - name: Deploy to Server
+    - run: ls -la
+
+    - name: Restart Server
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.REMOTE_HOST }}
@@ -17,8 +30,5 @@ jobs:
           export NVM_DIR=~/.nvm
           source ~/.nvm/nvm.sh
           cd portfolio-next
-          git pull
           npm install
-          npm run build
           pm2 restart next
-        
