--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Run build task
       run: npm run build --if-present
     - name: Deploy to Server
-    - run: ls -la
+      run: ls -la
 
     - name: Restart Server
       uses: appleboy/ssh-action@master
