--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,19 @@ on: [push]
 
 jobs:
 
+  prettier:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Prettier
+      uses: creyD/prettier_action@v4.2
+      with:
+        prettier_options: --write **/*.{tsx,ts,css}
+      
+
   deploy:
     runs-on: ubuntu-latest
 
