--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ jobs:
       uses: creyD/prettier_action@v4.2
       with:
         prettier_options: --write **/*.{tsx,ts,css}
+        same_commit: true
       
 
   deploy:
