--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-next": "12.2.5",
     "marked": "^4.1.0",
     "postcss": "^8.4.16",
+    "prettier": "^2.8.7",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.2"
   }
